# asak

./: .travis.yml  Dockerfile  LICENSE  README.md  asak.opam  dune-project  index.html
.github/workflows/: main.yml
asak/: index.html
asak/Asak/: index.html
asak/Asak/Clustering/: index.html
asak/Asak/Clustering/Distance/: index.html
asak/Asak/Clustering/Hash/: index.html
asak/Asak/Lambda_hash/: index.html
asak/Asak/Lambda_normalization/: index.html
asak/Asak/Monad_error/: index.html
asak/Asak/Monad_error/ErrS/: index.html
asak/Asak/Monad_error/Make/: index.html
asak/Asak/Monad_error/Make/argument-1-T/: index.html
asak/Asak/Monad_error/module-type-T/: index.html
asak/Asak/Parse_structure/: index.html
asak/Asak/Partition/: index.html
asak/Asak/Wtree/: index.html
src/: clustering.ml  clustering.mli  clustering_bench.ml  create.ml  create.mli  dune  factorization.ml  factorization.mli  lambda_hash.ml  lambda_hash.mli  lambda_normalization.ml  lambda_normalization.mli  lambda_utils.ml  lambda_utils.mli  monad_error.ml  monad_error.mli  parse_fragment.ml  parse_fragment.mli  parse_structure.ml  parse_structure.mli  partition.ml  partition.mli  utils.ml  utils.mli  wtree.ml  wtree.mli
test/: dune  test.ml
utils/: README.md  build_all_opam.ml  build_assoc.ml  dune  inspect_db.ml  run_on_lambdas.ml
