opam-version: "2.0"

name: "asak"
version: "0.1"

synopsis: "Partitioning OCaml codes"
description: "Asak provides functions to hash OCaml codes, such that similar codes have the same hash.\nIt is then used to partition codes implementing the same function, or help to factorize existing code."

maintainer: ["alexandre@moine.me"]
authors: ["Alexandre Moine"]
license: "MIT"

homepage: "https://github.com/nobrakal/asak"
doc: "https://nobrakal.github.io/asak/asak/index.html"
bug-reports: "https://github.com/nobrakal/asak/issues"
dev-repo: "git+https://github.com/nobrakal/asak.git"

depends: [
  "ocaml" {>= "4.05"}
  "dune" {build & > "1.5"}
  "cppo" {build & >= "1.6.0"}
  "odoc" {with-doc & >= "1.2.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc"] {with-doc}
]
