opam-version: "2.0"

name: "asak"
version: "0.4"

synopsis: "Partitioning OCaml codes"
description:
"""
Asak provides functions to parse, type-check and identify similar OCaml codes.
These functions are then used to partition codes implementing the same function and help to detect code duplication.
"""

maintainer: ["alexandre@moine.me"]
authors: ["Alexandre Moine"]
license: "MIT"

homepage: "https://github.com/nobrakal/asak"
doc: "https://nobrakal.github.io/asak/asak/index.html"
bug-reports: "https://github.com/nobrakal/asak/issues"
dev-repo: "git+https://github.com/nobrakal/asak.git"

depends: [
  "ocaml"    {>= "4.05" & < "5"}
  "cmdliner" {>= "1.0.0"}
  "dune"     {> "1.5"}
  "cppo"     {build & >= "1.6.0"}
  "odoc"     {with-doc  & >= "1.2.0"}
  "alcotest" {with-test & >= "0.8.0"}
]

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
